default release increase is minor

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -22,7 +22,7 @@ version-resolver:
   patch:
     labels:
       - 'semver:patch'
-  default: patch
+  default: minor
 template: |
   Changes in this release:
 
