fix coding style

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,3 +14,5 @@ ktlint_standard_function-naming = disabled
 ktlint_standard_string-template-indent = disabled # due to multiline-expression-wrapping dependency
 ktlint_standard_class-signature = disabled # due to discouraged-comment-location
 ktlint_standard_if-else-wrapping = disabled # due to discouraged-comment-location
+ktlint_standard_no-empty-first-line-in-class-body = disabled # I don't like it
+ktlint_standard_function-expression-body = disabled # I don't like it
