--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ android.useAndroidX=true
 kotlin.code.style=official
 
 GROUP=dev.hrach.navigation
-VERSION_NAME=
+VERSION_NAME=0.1.0
 
 POM_URL=https://github.com/hrach/navigation-compose/
 POM_SCM_URL=https://github.com/hrach/navigation-compose/
