--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,10 @@ jobs:
       - name: Deploy to Sonatype
         run: |
           ./gradlew :publishAggregatedPublicationToCentralPortal --no-configuration-cache
-      - name: Build AAB & APK
+      - name: Build APK
         run: |
-          ./gradlew :demo:bundleRelease :demo:assembleRelease
+          ./gradlew :demo:assembleRelease
+          mv demo/build/outputs/apk/release/demo-release-unsigneg.apk demo/build/outputs/apk/release/demo-release.apk
       - name: Upload APK to release
         uses: softprops/action-gh-release@v2
         id: release
