--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,8 +5,10 @@ minSdk = "21"
 
 [libraries]
 
-kotlin-serialization = "org.jetbrains.kotlinx:kotlinx-serialization-core:1.6.3"
+kotlin-serialization-core = "org.jetbrains.kotlinx:kotlinx-serialization-core:1.6.3"
+kotlin-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
 appcompat = "androidx.appcompat:appcompat:1.6.1"
+androidx-lifecycle-runtime = "androidx.lifecycle:lifecycle-runtime:2.8.0"
 compose-material3 = "androidx.compose.material3:material3:1.3.0-beta01"
 navigation-compose = "androidx.navigation:navigation-compose:2.8.0-beta01"
 junit = { module = "junit:junit", version = "4.13.2" }
