--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ kotlin-serialization-core = "org.jetbrains.kotlinx:kotlinx-serialization-core:1.
 kotlin-serialization-json = "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.3"
 appcompat = "androidx.appcompat:appcompat:1.6.1"
 androidx-lifecycle-runtime = "androidx.lifecycle:lifecycle-runtime:2.8.1"
+compose-foundation = "androidx.compose.foundation:foundation:1.6.8"
 compose-material3 = "androidx.compose.material3:material3:1.3.0-beta04"
 navigation-compose = "androidx.navigation:navigation-compose:2.8.0-beta04"
 junit = { module = "junit:junit", version = "4.13.2" }
